@@ -1,3 +1,8 @@
+2015-05-31  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* EcLogger.m: When logging to stderr, use lock to synchronise with
+	logs produced by gnustep-base NSLog().
+
 2015-05-29  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* EcAlarmSinkSNMP.m: log SNMP errors via the main logging mechanism
